syntax = "proto3";
package msg;

message Msg {
  enum MsgType {
    P2P = 0; // 单聊
    P2G = 1; // 群聊
  }

  enum ContentType {
    WITHDRAW = 0; // 撤回
    TEXT     = 1; // 文字（包括内置表情包）
    IMAGE    = 2; // 图片
    FILE     = 3; // 文件
    AUDIO    = 4; // 语音
    VIDEO    = 5; // 视频
  }

  string msgId                       = 1;
  MsgType msgType                    = 2;
  ContentType contentType            = 3;

  string sender                      = 4;
  string receiver                    = 5;
  int64 createAt                     = 6;
  string content                      = 7;
}